src/objects/OrderApi__Item_Class__c.object
<CustomObject>
    <description>Master categorization and logic driver for Items and Item purchase work flow.</description>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Event.</description>
        <inlineHelpText>Link to related Event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Item Classes</relationshipLabel>
        <relationshipName>Item_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Event_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items linked to this Item Class may only be purchased if they are the direct child of a &quot;Registration&quot; record related to an &quot;Active&quot; Event. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items linked to this Item Class may only be purchased if they are the direct child of a &quot;Registration&quot; record related to an &quot;Active&quot; Event. Defaults unchecked.</inlineHelpText>
        <label>Is Event Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Schedule_Item_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** Checked if Item Class is related to Event Ticket Type.</description>
        <inlineHelpText>** System Calculated ** Checked if Item Class is related to Event Ticket Type.</inlineHelpText>
        <label>Is Schedule Item Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Sponsor_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** Checked if Item Class is related to Event Sponsor Package.</description>
        <inlineHelpText>** System Calculated ** Checked if Item Class is related to Event Sponsor Package.</inlineHelpText>
        <label>Is Sponsor Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Ticket_Type_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** Checked if Item Class is related to Event Ticket Type.</description>
        <inlineHelpText>** System Calculated ** Checked if Item Class is related to Event Ticket Type.</inlineHelpText>
        <label>Is Ticket Type Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Active_Assignments__c</fullName>
        <description>** System Calculated ** Identifies the number of active Assignments related to this class.</description>
        <inlineHelpText>** System Calculated ** Identifies the number of active Assignments related to this class.</inlineHelpText>
        <label>Active Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assign_to_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Assignments by default will be linked directly to the related Item without a parent &quot;Assignment SObject&quot;.</description>
        <inlineHelpText>When checked, Assignments by default will be linked directly to the related Item without a parent &quot;Assignment SObject&quot;.</inlineHelpText>
        <label>Assign to Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignment_Inventory__c</fullName>
        <description>Identifies maximum number of available Assignment related to class.</description>
        <inlineHelpText>Identifies maximum number of available Assignment related to class.</inlineHelpText>
        <label>Assignment Inventory</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignment_SObject__c</fullName>
        <description>** Conditionally Required ** The API name of the custom object to create when a &quot;Assignable&quot; Item is purchased. Required if &quot;Enable Assignments&quot; is checked.</description>
        <inlineHelpText>** Conditionally Required ** The API name of the custom object to create when a &quot;Assignable&quot; Item is purchased. Required if &quot;Enable Assignments&quot; is checked.</inlineHelpText>
        <label>Assignment SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignments_Display_Label__c</fullName>
        <description>The label to display in the wizard for the step related to assigning people to a subscription.</description>
        <inlineHelpText>The label to display in the wizard for the step related to assigning people to a subscription.</inlineHelpText>
        <label>Assignments Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Available_Inventory__c</fullName>
        <description>Identifies maximum number of available Items related to class.</description>
        <inlineHelpText>Identifies maximum number of available Items related to class.</inlineHelpText>
        <label>Available Inventory</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Item Classes</relationshipLabel>
        <relationshipName>Item_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Defer_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the deferred revenue recognition rules will be considered when posting transactions.</description>
        <inlineHelpText>When checked, the deferred revenue recognition rules will be considered when posting transactions.</inlineHelpText>
        <label>Defer Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Deferred_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL Account Where Deferred Revenue Recognition is Tracked</description>
        <inlineHelpText>GL Account Where Deferred Revenue Recognition is Tracked</inlineHelpText>
        <label>Deferred Revenue Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Item Classes(Deferred Revenue Account)</relationshipLabel>
        <relationshipName>Item_Classes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Deferred_Revenue_Term__c</fullName>
        <description>Term the Revenue has to be deferred if not a Subscription.</description>
        <inlineHelpText>Term the Revenue has to be deferred if not a Subscription.</inlineHelpText>
        <label>Deferred Revenue Term (In Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Disable_Scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Scheduling is disabled when an item of this class is purchased</description>
        <inlineHelpText>Scheduling is disabled when an item of this class is purchased</inlineHelpText>
        <label>Disable Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Assignment_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will track the number of active assignments related to the Item Class and auto-expire all related Items once the &quot;Assignment Inventory&quot; is less than or equal to the &quot;Active Assignments&quot;.</description>
        <inlineHelpText>When checked, the system will track the number of active assignments related to the Item Class and auto-expire all related Items once the &quot;Assignment Inventory&quot; is less than or equal to the &quot;Active Assignments&quot;.</inlineHelpText>
        <label>Enable Assignment Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Item_Class_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will track the number of times any Item linked to this Item Class.</description>
        <inlineHelpText>When checked, the system will track the number of times any Item linked to this Item Class.</inlineHelpText>
        <label>Enable Item Class Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Flex_Day_of_the_Month__c</fullName>
        <description>Deferred Revenue before flex day is treated as no partial credit and after flex day it will post the transactions from next month.</description>
        <inlineHelpText>Deferred Revenue before flex day is treated as no partial credit and after flex day it will post the transactions from next month.</inlineHelpText>
        <label>Flex Day of the Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Interview_Form_Display_Label__c</fullName>
        <description>The label to display in the wizard for the step related to completing the interview form questions.</description>
        <inlineHelpText>The label to display in the wizard for the step related to completing the interview form questions.</inlineHelpText>
        <label>Interview Form Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items will be allowed to be linked to the Item Class. Defaults checked.</description>
        <inlineHelpText>When checked, Items will be allowed to be linked to the Item Class. Defaults checked.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Contribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra contribution (donation) related controls and features. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra contribution (donation) related controls and features. Defaults unchecked.</inlineHelpText>
        <label>Is Contribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Downloadable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra downloadable specific controls and features. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra downloadable specific controls and features. Defaults unchecked.</inlineHelpText>
        <label>Is Downloadable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra event specific controls and features. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra event specific controls and features. Defaults unchecked.</inlineHelpText>
        <label>Is Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Inventoried__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with inventory tracking options and controls. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with inventory tracking options and controls. Defaults unchecked.</inlineHelpText>
        <label>Is Inventoried</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Publication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra publication specific controls and features. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra publication specific controls and features. Defaults unchecked.</inlineHelpText>
        <label>Is Publication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with service billing options and controls. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with service billing options and controls. Defaults unchecked.</inlineHelpText>
        <label>Is Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Shipping_Carrier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to create a Shipping Carrier.</description>
        <inlineHelpText>Select the checkbox to create a Shipping Carrier.</inlineHelpText>
        <label>Is Shipping Carrier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra subscription related controls and features. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra subscription related controls and features. Defaults unchecked.</inlineHelpText>
        <label>Is Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Tax_Deductible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the item class is a tax deductible donation. The cost per unit will drive the tax deductible amount on the sales order.</description>
        <inlineHelpText>Check if the item class is a tax deductible donation. The cost per unit will drive the tax deductible amount on the sales order.</inlineHelpText>
        <label>Is Tax Deductible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the Item Class used for taxes rates applied to taxable items.</description>
        <inlineHelpText>Identifies the Item Class used for taxes rates applied to taxable items.</inlineHelpText>
        <label>Is Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items created that are associated with this Item Class will automatically be
enabled for tax and VAT options and controls. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled for tax and VAT options and controls. Defaults unchecked.</inlineHelpText>
        <label>Is Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Refresh__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Refresh will copy all the values for every field that is similar to its children Item field records.</description>
        <inlineHelpText>Refresh Items linked to this Item Class with updated Price Rules and Access Permissions as they are currently configured.</inlineHelpText>
        <label>Refresh</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items linked to the Item Class by default will require Assignment prior to posting a Sales Order. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items linked to the Item Class by default will require Assignment prior to posting a Sales Order. Defaults unchecked.</inlineHelpText>
        <label>Require Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra shipping/delivery options and controls. Defaults unchecked.</description>
        <inlineHelpText>When checked, Items created that are associated with this Item Class will automatically be
enabled with extra shipping/delivery options and controls. Defaults unchecked.</inlineHelpText>
        <label>Require Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Revenue_Recognition_Date__c</fullName>
        <description>Revenue recognition Date for deferred Revenue When Specific Date is selected for Recognition Rule</description>
        <inlineHelpText>Revenue recognition Date for deferred Revenue When Specific Date is selected for Recognition Rule</inlineHelpText>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Revenue_Recognition_Rule__c</fullName>
        <description>Deferred Revenue is recognized either over time or on specific date.</description>
        <inlineHelpText>Deferred Revenue is recognized either over time or on specific date.</inlineHelpText>
        <label>Revenue Recognition Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Over Time</fullName>
                </value>
                <value>
                    <fullName>Specific Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Revenue_Recognition_Term_Rule__c</fullName>
        <description>How you want recognize revenue over time.</description>
        <inlineHelpText>How you want recognize revenue over time.</inlineHelpText>
        <label>Revenue Recognition Term Rule</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>OrderApi__Revenue_Recognition_Rule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No Partial Credit</fullName>
                </value>
                <value>
                    <fullName>Flex Day</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Shipping_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the Shipping GL Account.</description>
        <inlineHelpText>Identifies the Shipping GL Account.</inlineHelpText>
        <label>Shipping GL Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Item Classes (Shipping GL Account)</relationshipLabel>
        <relationshipName>Item_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sold_Inventory__c</fullName>
        <description>** System Calculated ** Identifies the number of items sold related to this class.</description>
        <inlineHelpText>** System Calculated ** Identifies the number of items sold related to this class.</inlineHelpText>
        <label>Sold Inventory</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Plan_Display_Label__c</fullName>
        <description>The label to display in the wizard for the step related to selecting a subscription plan.</description>
        <inlineHelpText>The label to display in the wizard for the step related to selecting a subscription plan.</inlineHelpText>
        <label>Subscription Plan Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Tax_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate this field for items that need to apply tax.</description>
        <inlineHelpText>Populate this field for items that need to apply tax.</inlineHelpText>
        <label>Tax Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Item Classes</relationshipLabel>
        <relationshipName>Item_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Use_Default_Tax_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox when using the same tax rate for items regardless of the purchaser&apos;s locale.</description>
        <inlineHelpText>Select this checkbox when using the same tax rate for items regardless of the purchaser&apos;s locale.</inlineHelpText>
        <label>Use Default Tax Rate</label>
        <type>Checkbox</type>
    </fields>
    <label>Item Class</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Business_Group__c</columns>
        <columns>OrderApi__Description__c</columns>
        <columns>OrderApi__Enable_Assignments__c</columns>
        <columns>OrderApi__Assignment_SObject__c</columns>
        <columns>OrderApi__Is_Active__c</columns>
        <columns>EventApi__Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Item Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>